Ajustando lint dos arquivos

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,19 +21,21 @@
     },    
     "rules": {
         "@typescript-eslint/ban-ts-comment": "warn",
-        "@typescript-eslint/explicit-module-boundary-types": "warn",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-array-constructor": "warn",
-        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-loss-of-precision": "warn",
         "@typescript-eslint/no-non-null-assertion": "warn",
         "@typescript-eslint/no-this-alias": "warn",
         "@typescript-eslint/no-unnecessary-type-assertion": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/no-use-before-define": "warn",
-        "@typescript-eslint/no-var-requires": "warn",
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/no-empty-function": "off",
         "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
         "camelcase": "warn",
-        "complexity": ["warn", 5],
+        "complexity": ["warn", 40],
         "consistent-this": ["warn", "self"],
         "func-name-matching": "warn",
         "func-names": "warn",
@@ -41,11 +43,12 @@
         "line-comment-position": ["warn", { "position": "above" }],
         "lines-between-class-members": ["warn", "always"],
         "max-depth": ["warn", 3],
-        "max-len": ["warn", { "code": 200 }],
-        "max-lines-per-function": ["warn", { "max": 60 }],
+        "max-len": ["warn", { "code": 250 }],
+        "max-lines-per-function": ["warn", { "max": 150 }],
         "max-nested-callbacks": ["warn", 2],
-        "max-params": ["warn", 3],
-        "max-statements": ["warn", 20],
+        "max-params": ["warn", 5],
+        "max-statements": ["warn", 30],
+        "no-case-declarations": "off",
         "no-compare-neg-zero": "warn",
         "no-console": ["warn", { "allow": ["warn", "error"] }],
         "no-debugger": "warn",
@@ -60,18 +63,19 @@
         "no-extra-boolean-cast": "warn",
         "no-extra-semi": "warn",
         "no-irregular-whitespace": "warn",
-        "no-magic-numbers": "warn",
+        "no-magic-numbers": "off",
         "no-mixed-spaces-and-tabs" : "warn",
         "no-prototype-builtins": "warn",
         "no-redeclare": "warn",
-        "no-undef": "warn",
+        "no-undef": "off",
         "no-unexpected-multiline": "warn",
-        "no-unused-expressions": "warn",
+        "no-unused-expressions": "off",
         "no-unused-vars": "warn",
         "no-use-before-define": "warn",
         "no-useless-escape": "warn",
         "no-useless-rename": "warn",
         "no-var": "warn",
+        "non-nullish": "off",
         "object-curly-spacing": ["warn", "always"],
         "react/display-name": "warn",
         "react/no-deprecated": "warn",
