--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
     "name": "fblibrary-react",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fonteeboa/FBLibrary"
+    },
+    "main": "index.js",    
     "dependencies": {
         "@ant-design/icons": "^5.2.6",
         "@babel/preset-typescript": "^7.23.3",
