--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fblibrary-react",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -51,6 +51,7 @@
         "@babel/preset-react": "^7.23.3",
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-typescript": "^11.1.5",
         "@testing-library/jest-dom": "^6.1.5",
