--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,15 @@
       "esnext"
     ],
     "outDir": "./dist",
-    "module": "esnext",    
+    "module": "esnext",   
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
     "noEmit": true,    
@@ -32,7 +32,7 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/test/**"
   ]
-
 }
