--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
     "name": "fblibrary-react",
-    "version": "1.0.4",
+    "version": "1.0.9",
     "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/fonteeboa/FBLibrary"
     },
     "main": "dist/bundle.js",
-    "types": "dist/src/index.d.ts",
-    "files": [
-        "dist",
-        "README.md"
-    ],
+    "types": "dist/types/src/index.d.ts",
     "scripts": {
         "test": "jest --passWithNoTests --no-cache",
         "lint": "eslint .",
         "lint-fix": "eslint . --ext .ts,.tsx --fix",
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "publishVersion": "npm run build && rm -y dist/src/test && npm publish"
     },
     "eslintConfig": {
         "extends": [
@@ -37,6 +34,7 @@
         "antd": "^5.12.2",
         "axios": "^1.6.2",
         "heroicons-react": "^1.4.1",
+        "i18next-browser-languagedetector": "^7.2.0",
         "moment": "^2.29.4",
         "react": "^18.0.0",
         "react-i18next": "^13.5.0",
@@ -65,6 +63,7 @@
         "match-media-mock": "^0.1.1",
         "react-app": "^1.1.2",
         "rollup": "^2.79.1",
+        "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-terser": "^7.0.2",
         "ts-jest": "^29.1.1",
