--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,10 @@
 sonar.projectKey=fonteeboa_FBLibrary
 sonar.organization=fonteeboa
 sonar.sources=src
-sonar.tests=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.projectName=FBLibrary
+sonar.sources=src
+sonar.sourceEncoding=UTF-8
+sonar.exclusions=src/test
+sonar.tests=src/test
+sonar.test.inclusions=**/*Test.tsx, **/*Test.ts, **/__tests__/**
