--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,4 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=src/test
 sonar.tests=src/test
 sonar.test.inclusions=**/*Test.tsx, **/*Test.ts, **/__tests__/**
+sonar.coverage.exclusions=**/*Test.*,**/*Tests.*
