testes: aumentando coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=src/test
 sonar.tests=src/test
 sonar.test.inclusions=**/*Test.tsx, **/*Test.ts, **/__tests__/**
-sonar.coverage.exclusions=**/*Test.*,**/*Tests.*, src/test/**/*
+sonar.coverage.exclusions=**/*Test.*,**/*Tests.*, src/test/**/*, src/assets/**/*, src/i18n/**/*, dist/**/*, .github/**/*
