--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "publishConfig": {
         "registry": "https://www.npmjs.com/package/fblibrary-react"
-      },
+    },
     "main": "dist/bundle.js",
     "types": "dist/types/src/index.d.ts",
     "scripts": {
@@ -47,6 +47,7 @@
         "typescript": "^5.3.3"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.6",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@babel/preset-env": "^7.23.6",
         "@babel/preset-react": "^7.23.3",
@@ -57,13 +58,16 @@
         "@rollup/plugin-typescript": "^11.1.5",
         "@testing-library/jest-dom": "^6.1.5",
         "@testing-library/react": "^14.1.2",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.56.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-solid": "^0.13.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-fetch-mock": "^3.0.3",
         "jest-junit": "^16.0.0",
         "match-media-mock": "^0.1.1",
+        "node-fetch": "^3.3.2",
         "react-app": "^1.1.2",
         "rollup": "^2.79.1",
         "rollup-plugin-copy": "^3.5.0",
