fb-library: removendo usdo de lib fixa

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "types": "dist/types/src/index.d.ts",
     "scripts": {
         "test": "jest --passWithNoTests --no-cache --coverage",
+        "test:watch": "jest --watch",
         "lint": "eslint .",
         "lint-fix": "eslint . --ext .ts,.tsx --fix",
         "build": "rollup -c",
+        "watch": "rollup -c --watch",
         "publishVersion": "npm run build && rm -y dist/src/test && npm publish"
     },
     "eslintConfig": {
@@ -29,41 +31,40 @@
         "react-dom": "^18.0.0"
     },
     "dependencies": {
-        "@ant-design/icons": "^5.2.6",
-        "@babel/preset-typescript": "^7.23.3",
-        "@fortawesome/free-solid-svg-icons": "^6.5.1",
-        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@ant-design/icons": "^5.6.1",
+        "@babel/preset-typescript": "^7.26.0",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.2.0",
         "@types/react-modal": "^3.16.3",
-        "antd": "^5.12.2",
-        "axios": "^1.6.2",
-        "heroicons-react": "^1.4.1",
-        "i18next-browser-languagedetector": "^7.2.0",
-        "moment": "^2.29.4",
+        "antd": "^5.24.1",
+        "axios": "^1.7.9",
+        "i18next-browser-languagedetector": "^8.0.3",
+        "moment": "^2.30.1",
         "react": "^18.0.0",
-        "react-i18next": "^13.5.0",
-        "react-loader-spinner": "^6.1.0",
-        "react-modal": "^3.16.1",
-        "react-router-dom": "^6.21.0",
-        "typescript": "^5.3.3"
+        "react-loader-spinner": "^6.1.6",
+        "react-modal": "^3.16.3",
+        "react-router-dom": "^7.2.0",
+        "typescript": "^5.7.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.23.6",
+        "@babel/core": "^7.26.9",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@babel/preset-env": "^7.23.6",
-        "@babel/preset-react": "^7.23.3",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-react": "^7.26.3",
         "@rollup/plugin-babel": "^6.0.4",
-        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-commonjs": "^28.0.2",
         "@rollup/plugin-json": "^6.1.0",
-        "@rollup/plugin-node-resolve": "^15.2.3",
-        "@rollup/plugin-typescript": "^11.1.5",
-        "@testing-library/jest-dom": "^6.1.5",
-        "@testing-library/react": "^14.1.2",
+        "@rollup/plugin-node-resolve": "^16.0.0",
+        "@rollup/plugin-typescript": "^12.1.2",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/aria-query": "^5.0.4",
         "@types/scheduler": "^0.23.0",
         "babel-jest": "^29.7.0",
-        "eslint": "^8.56.0",
+        "eslint": "^8.0.0",
         "eslint-config-react-app": "^7.0.1",
-        "eslint-plugin-solid": "^0.13.0",
+        "eslint-plugin-solid": "^0.14.5",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-fetch-mock": "^3.0.3",
@@ -71,11 +72,11 @@
         "match-media-mock": "^0.1.1",
         "node-fetch": "^3.3.2",
         "react-app": "^1.1.2",
-        "rollup": "^2.79.1",
+        "rollup": "^2.0.0",
         "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-terser": "^7.0.2",
-        "ts-jest": "^29.1.1",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2"
     },
     "keywords": [
