--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,86 +1,88 @@
 {
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-        "parserOptions": {
-        "ecmaVersion": "latest",
-        "project": "./tsconfig.json" // Caminho para o seu arquivo tsconfig.json
-    },
-    "plugins": [
-        "@typescript-eslint",
-        "react",
-        "solid"
-    ],
-    "settings": {
-        "react": {
-          "version": "detect"
-        }
-    },    
-    "rules": {
-        "@typescript-eslint/ban-ts-comment": "warn",
-        "@typescript-eslint/explicit-module-boundary-types": "off",
-        "@typescript-eslint/no-array-constructor": "warn",
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-loss-of-precision": "warn",
-        "@typescript-eslint/no-non-null-assertion": "warn",
-        "@typescript-eslint/no-this-alias": "warn",
-        "@typescript-eslint/no-unnecessary-type-assertion": "warn",
-        "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/no-use-before-define": "warn",
-        "@typescript-eslint/no-inferrable-types": "off",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/no-empty-function": "off",
-        "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
-        "camelcase": "warn",
-        "complexity": ["warn", 40],
-        "consistent-this": ["warn", "self"],
-        "func-name-matching": "warn",
-        "func-names": "warn",
-        "key-spacing": ["warn", { "beforeColon": false, "afterColon": true }],
-        "line-comment-position": ["warn", { "position": "above" }],
-        "lines-between-class-members": ["warn", "always"],
-        "max-depth": ["warn", 3],
-        "max-len": ["warn", { "code": 250 }],
-        "max-lines-per-function": ["warn", { "max": 150 }],
-        "max-nested-callbacks": ["warn", 2],
-        "max-params": ["warn", 5],
-        "max-statements": ["warn", 30],
-        "no-case-declarations": "off",
-        "no-compare-neg-zero": "warn",
-        "no-console": ["warn", { "allow": ["warn", "error"] }],
-        "no-debugger": "warn",
-        "no-dupe-args": "warn",
-        "no-dupe-class-members": "warn",
-        "no-dupe-else-if": "warn",
-        "no-dupe-keys": "warn",
-        "no-duplicate-case": "warn",
-        "no-duplicate-imports": "warn",
-        "no-empty": "warn",
-        "no-ex-assign": "warn",
-        "no-extra-boolean-cast": "warn",
-        "no-extra-semi": "warn",
-        "no-irregular-whitespace": "warn",
-        "no-magic-numbers": "off",
-        "no-mixed-spaces-and-tabs" : "warn",
-        "no-prototype-builtins": "warn",
-        "no-redeclare": "warn",
-        "no-undef": "off",
-        "no-unexpected-multiline": "warn",
-        "no-unused-expressions": "off",
-        "no-unused-vars": "warn",
-        "no-use-before-define": "warn",
-        "no-useless-escape": "warn",
-        "no-useless-rename": "warn",
-        "no-var": "warn",
-        "non-nullish": "off",
-        "object-curly-spacing": ["warn", "always"],
-        "react/display-name": "warn",
-        "react/no-deprecated": "warn",
-        "react/no-direct-mutation-state": "warn",
-        "react/prop-types": "warn",
-        "yoda": "warn"
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended"
+  ],
+  "ignorePatterns": [
+    "node_modules/",
+    "dist/",
+    "build/",
+    "**/react-fb-library/**"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint", "react", "solid"],
+  "settings": {
+    "react": {
+      "version": "detect"
     }
+  },
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-array-constructor": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-loss-of-precision": "warn",
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/no-this-alias": "warn",
+    "@typescript-eslint/no-unnecessary-type-assertion": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-use-before-define": "warn",
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
+    "camelcase": "warn",
+    "complexity": ["warn", 40],
+    "consistent-this": ["warn", "self"],
+    "func-name-matching": "warn",
+    "func-names": "warn",
+    "key-spacing": ["warn", { "beforeColon": false, "afterColon": true }],
+    "line-comment-position": ["warn", { "position": "above" }],
+    "lines-between-class-members": ["warn", "always"],
+    "max-depth": ["warn", 3],
+    "max-len": ["warn", { "code": 250 }],
+    "max-lines-per-function": ["warn", { "max": 150 }],
+    "max-nested-callbacks": ["warn", 2],
+    "max-params": ["warn", 5],
+    "max-statements": ["warn", 30],
+    "no-case-declarations": "off",
+    "no-compare-neg-zero": "warn",
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    "no-debugger": "warn",
+    "no-dupe-args": "warn",
+    "no-dupe-class-members": "warn",
+    "no-dupe-else-if": "warn",
+    "no-dupe-keys": "warn",
+    "no-duplicate-case": "warn",
+    "no-duplicate-imports": "warn",
+    "no-empty": "warn",
+    "no-ex-assign": "warn",
+    "no-extra-boolean-cast": "warn",
+    "no-extra-semi": "warn",
+    "no-irregular-whitespace": "warn",
+    "no-magic-numbers": "off",
+    "no-mixed-spaces-and-tabs": "warn",
+    "no-prototype-builtins": "warn",
+    "no-redeclare": "warn",
+    "no-undef": "off",
+    "no-unexpected-multiline": "warn",
+    "no-unused-expressions": "off",
+    "no-unused-vars": "warn",
+    "no-use-before-define": "warn",
+    "no-useless-escape": "warn",
+    "no-useless-rename": "warn",
+    "no-var": "warn",
+    "non-nullish": "off",
+    "object-curly-spacing": ["warn", "always"],
+    "react/display-name": "warn",
+    "react/no-deprecated": "warn",
+    "react/no-direct-mutation-state": "warn",
+    "react/prop-types": "warn",
+    "yoda": "warn"
+  }
 }
