menu: ajustando montagem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["scheduler"],
+    "types": ["scheduler", "node", "jest"],
     "target": "es6",
     "lib": [
       "dom",
