--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@types/aria-query": "^5.0.4",
+        "@types/node": "^22.13.4",
         "@types/scheduler": "^0.23.0",
         "babel-jest": "^29.7.0",
         "eslint": "^8.0.0",
